# Mobile-development

16_home_work(algoritms)/first_task/first_task/: first_task.pro  main.cpp
16_home_work(algoritms)/second_task/second_task/: main.cpp
1_home_work/first_task/1_home_work/: 1_home_work.pro  functions.cpp  functions.h  main.cpp  main.qml
1_home_work/first_task/build-1_home_work-Desktop_Qt_5_12_2_MinGW_32_bit-Debug/: Makefile  Makefile.Debug  Makefile.Release
1_home_work/second_task/build-second_task-Desktop_Qt_5_12_2_MinGW_32_bit-Debug/: Makefile  Makefile.Debug  Makefile.Release
1_home_work/second_task/second_task/: mainwindow.cpp  mainwindow.h  second_task.pro
2_Home_work/first_task(date_app)/build-date_app-Desktop_Qt_5_12_2_MinGW_32_bit-Debug/: Makefile  Makefile.Debug  Makefile.Release
2_Home_work/first_task(date_app)/date_app/: LoginScrean.qml  RegistrationScreen.qml  appcore.cpp  appcore.h  date_app.pro  main.cpp  main.qml  persaninfo.cpp  persaninfo.h  personinfo.cpp  qml.qrc
2_Home_work/second_task/build-button_morf-Desktop_Qt_5_12_2_MinGW_32_bit-Debug/: Makefile  Makefile.Debug  Makefile.Release
2_Home_work/second_task/button_morf/: main.qml
3_Home_work/first_task/first_task/: main.qml
4_Home_work/: graph.cpp  graph.h
7_home_work/second_task/: friendItem.qml  main.cpp  main.qml  qml.qrc  qmltablemodel.cpp  qmltablemodel.h  second_task.pro
8_home_work(net)/: CMakeLists.txt
8_home_work(net)/P2P_messenger/: CMakeLists.txt  main.cpp  messenger.cpp  messenger.h
8_home_work(net)/torrent/: CMakeLists.txt  torrent.cpp
(+73 files in other folders)
